config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    environment: prod
  ports:
    - protocol: TCP
      port: 7080
